<!--
  ~ Licensed under GPL 3.0
  -->

<!--
  ~ Licensed under GPL 3.0
  -->

<!--
  ~ Licensed under GPL 3.0
  -->

<!--
  ~ Licensed under GPL 3.0
  -->

<!--
  ~ Licensed under GPL 3.0
  -->

<resources>
    <string name="app_name">BurgerWP</string>
    <string name="welcome">Welcome to my app!</string>
    <string name="git">Fork me on github! (https://github.com/samsumas/LivingBurger)</string>
    <string name="startPreview">Press the burger to start the preview!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- strings related to options for simpledraw -->
    <string-array name="configuratorParameters">
        <item name="count">Count</item>
        <!--     <item name="isExternalResource">Is the image located on your storage?</item> -->
        <item name="image">Image</item>
        <item name="x">dx</item>
        <item name="y">dy</item>
        <!--        <item name="actualTime">position of the animation (Deprecated)</item>-->
        <!--        <item name="totalTime">total duration of the animation (Deprecated)</item>-->
        <!--        <item name="selfDestroy">Disappears after some time</item>-->
        <!--        <item name="bouncing">Bounces around borders (Deprecated)</item>-->
        <!--        <item name="speed">Speed</item>-->
        <item name="rotation">dR</item>
        <!--        <item name="scalingFactor">Size</item>-->
        <!--        <item name="runsAway">Runs away from tapping</item>-->
    </string-array>
    <string-array name="configuratorParametersName">
        <item>count</item>
        <!-- <item>isExternalResource</item> -->
        <item>image</item>
        <item>x</item>
        <item>y</item>
        <!--       <item>actualTime</item>-->
        <!--       <item>totalTime</item>-->
        <!--       <item>selfDestroy</item>-->
        <!--       <item>bouncing</item>-->
        <!--       <item>speed</item>-->
        <item>rotation</item>
        <!--       <item>scalingFactor</item>-->
        <!--       <item>runsAway</item>-->
    </string-array>
    <string-array name="configuratorParameterStandardBurgerValue">
        <item>Burger</item>
        <item>1</item>
        <!-- <item>false</item> -->
        <item>0</item> <!-- image wil be set in the code -->
        <item>1.0</item>
        <item>1.0</item>
        <!--       <item>actualTime</item>-->
        <!--       <item>totalTime</item>-->
        <!--       <item>selfDestroy</item>-->
        <!--       <item>bouncing</item>-->
        <!--       <item>speed</item>-->
        <item>1.0</item>
        <!--       <item>scalingFactor</item>-->
        <!--       <item>runsAway</item>-->
    </string-array>
    <string-array name="configuratorParametersType">
        <item>INT</item>
        <!-- <item>BOOL</item> -->
        <item>IMAGE</item>
        <item>FLOAT</item>
        <item>FLOAT</item>
        <!--LONG,-->
        <!--LONG,-->
        <!--BOOL,-->
        <!--BOOL,-->
        <!--INT,-->
        <item>FLOAT</item>
        <!--FLOAT,-->
        <!--BOOL-->
    </string-array>

    <!-- buttons for pimpmyburger -->

    <string name="choose_image">Choose an Image</string>
    <string name="choose_dx">Choose X speed</string>
    <string name="choose_dy">Choose Y speed</string>
    <string name="choose_dr">Choose radial speed</string>
    <string name="choose_quantity">Choose quantity</string>

    <!-- buttons for the configurator -->
    <string name="Apply">Apply</string>
    <string name="Reset">Reset</string>
    <string name="Cancel">Cancel</string>
    <string name="Export">Export</string>
    <string name="Import">Import</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="ImportExportWarning">Import and Export are still in development and exported configs may not work with other versions.</string>


    <!-- Strings related to Settings -->
    <string name="burger_touch_behaviour">Afraid from humans?</string>
    <string name="pref_runAwayOn">Run away from tapping</string>
    <string name="pref_runAwayOff">Run towards tapping</string>
    <string name="pref_pizza_count">Click here to order n pizzas!</string>
    <string name="pref_burger_count">Click here to order n Burgers!</string>
    <string name="pref_pizza_speed">Change pizza delivery speed</string>
    <string name="pref_burger_speed">Change burger delivery speed</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_choose_bg_color">Choose a background color</string>
    <string name="pref_choose_bg_image">Choose a background image</string>
    <string name="pref_remove_bg_image">Remove the background image</string>
    <string name="pref_bg_color_or_bg_image">Use an Image instead of a color</string>

    <string name="go_to_mainactivity_for_bg_image">Go back to use (if needed) a background Image</string>

    <string name="default_color">white</string>
    <string-array name="colors">
        <item>black</item>
        <item>blue</item>
        <item>cyan</item>
        <item>dkgray</item>
        <item>gray</item>
        <item>green</item>
        <item>ltgray</item>
        <item>magenta</item>
        <item>red</item>
        <item>transparent</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string name="abc">abc</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_simple_configurator">SImpleConfigurator</string>
    <string name="title_activity_pimp_my_burger">PimpMyBurger</string>
</resources>
